--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
-
   },
   "devDependencies": {
     "gh-pages": "^6.1.1",
@@ -17,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
-    "izitoast": "^1.4.0"
+    "izitoast": "^1.4.0",
+    "simplelightbox": "^2.14.3"
   }
 }
