--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "push":"git add .; git commit -m 'update'; git push"
+
   },
   "devDependencies": {
     "gh-pages": "^6.1.1",
